[gd_scene load_steps=4 format=3 uid="uid://cu3ftopqq2vdn"]

[ext_resource type="Script" uid="uid://c63pjigj2iglm" path="res://Scripts/Balls/BallBody.gd" id="1_eb1ap"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7nh6h"]
radius = 22.0227

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nh6h"]
size = Vector2(4, 4)

[node name="bod_ball" type="Node2D" groups=["ball"]]
script = ExtResource("1_eb1ap")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7nh6h")

[node name="lbl_debug" type="Label" parent="."]
offset_left = -24.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 15.0

[node name="rec_ball" type="ColorRect" parent="."]
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0

[node name="col_hb" type="Area2D" parent="." groups=["colHb"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="col_hb"]
shape = SubResource("RectangleShape2D_7nh6h")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_exited"]
